src/test/deca/syntax/invalid/braces_en_trop.synt
braces_en_trop.deca:11: